--- a/Basic Javascript Projects/Basic_HTML_10.html
+++ b/Basic Javascript Projects/Basic_HTML_10.html
@@ -22,6 +22,9 @@
     <p id="let"></p>
     <button onclick="let_func()">Click here for a let</button>
 
+    <p id="let_object"></p>
+    <button onclick="let_object_func()">Click here for a let object</button>
+
 </body>
 
 </html>
